# pyd2d

./: MANIFEST.in  README.md  demo.py  pyproject.toml  test.py
.github/workflows/: ci.yml  publish.yml
pyd2d/: _pyd2d.pyi  _pyd2d_const.pyi  definitions.pxd  pyd2d.pyx
src/: pyd2d.pyi  pyd2d.pyx
src/pyd2d/: __init__.py  _pyd2d.pyi  _pyd2d_const.pyi  pyd2d.pyx
