[project]
name = "pyd2d"
version = "0.1.3"
description = "A Python wrapper for the Windows Direct2D and DirectWrite APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/merlinz01/pyd2d"
Repository = "https://github.com/merlinz01/pyd2d"
Issues = "https://github.com/merlinz01/pyd2d/issues"

[dependency-groups]
dev = [
    "cython>=3.1.0",
    "poethepoet>=0.32.2",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "setuptools>=75.8.2",
]

[build-system]
requires = ["setuptools>=75", "cython>=3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
ext-modules = [
    { name = "pyd2d", sources = ["src/pyd2d.pyx"], language = "c++", libraries = ["d2d1", "dwrite", "ole32"] }
]
exclude-package-data = { pyd2d = ["*.pyx"] }

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF022", "SIM"]

[tool.poe.tasks.format]
cmd = "ruff format"

[tool.poe.tasks.lint]
cmd = "ruff check"

[tool.poe.tasks.test]
cmd = "pytest test.py"
